--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,11 @@ section
     height: 200px;
     border-radius: 10px;
     box-shadow: 1px 3px 10px black;
-    /*rgba(0, 0, 0, 0.2);*/
+}
+.projComp:hover
+{
+    background-color: darkgreen;
+    
 }
 
 
@@ -153,11 +157,20 @@ border-right: 3px lightgreen solid;
     margin: 20px 10px;
     padding: 10px;
 }
-#comment{
+#commentInput{
 
     background-color: lightgray;
-    width: 600px;
-    height: 150px;
+    width: 500px;
+    height: 50px;
+}
+
+.comments-list
+{
+	height: 100px;
+}
+#comment-input-N-btn
+{
+	display: flex;
 }
 
 #title
@@ -204,8 +217,20 @@ margin: 0px auto;
  .mzirochippic{
     border-radius: 60%;
     width: 50px; 
-    border: 2px green solid;
 }
+
+#totem-pic{
+	padding: 1px;
+    border-radius: 60%;
+	/*border: 2px green solid;*/
+}
+#totem-pic:hover{
+	padding: 2px;
+	border: 2px green solid;
+    box-shadow: 0px 0px 2px green;
+
+}
+
  .descDiv
  {
  	padding-top: 10px;
@@ -243,6 +268,19 @@ margin: 0px auto;
     width: 80px;
     height: 70px;
 }
+
+.totem-btn:hover
+{
+	padding-bottom: 5px;
+	width: 100px;
+}
+
+#clicked-Name:hover{
+
+font-size: 15px;
+
+}
+
 
 
 #inputbox,#inputboxdict{
