--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
     font: 400 16px/1.6 Rubik, sans-serif;
 }
 
+body{
+    background-image: url("./components/img/nsenene.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+
 .writebox{
     background-color: white;
     opacity: 0.9;
@@ -31,8 +40,6 @@ margin: 5px auto 0px;}
 }
 section
 {
-    background-color: bisque;
-    /*margin: 10px;*/
     padding:  5px 50px;
     border-radius: 2px;
 }
@@ -40,7 +47,7 @@ section
 .shortlist-Space{
 	width: 285px;
 	padding:0;
-	/*height: */
+	background-color: rgba(255,255,255,0.1);
 }
 
 #instructions{
@@ -66,7 +73,7 @@ section
 #rotated-div:hover
 {
     /*transform: skewY(-1deg);*/
-    background-color: rgba(220,220,220,0.4);
+    background-color: rgba(255,255,255,0.95);
 }
 
 .navfonts{
@@ -83,13 +90,10 @@ section
     transform: skewY(-2deg);
 }
 
-
-
-
 .projComp
 {
 	border: none;
-    background-color: green;
+    background-color: rgba(255,255,255,0.99);
     padding: 20px;
     margin: 10px 10px 10px 10px;
     width: 380px;
@@ -99,7 +103,7 @@ section
 }
 .projComp:hover
 {
-    background-color: darkgreen;
+    background-color: rgba(255,255,255,0.95);
     
 }
 
@@ -129,7 +133,7 @@ font-size: 18px;
 {
     padding: 10px 0px 30px;
     width: 100%;
-    background-color: white;
+    background-color: rgba(255,255,255,0.99);
     box-shadow: 1px 1px 30px black;
     transform: skewY(2deg);
     margin-bottom: 60px;
@@ -191,6 +195,7 @@ border-right: 3px lightgreen solid;
 {
 	height: 250px;
 	overflow: scroll;
+	background-color: rgba(255,255,255, 0.9);
 }
 #comment-input-N-btn
 {
@@ -199,9 +204,10 @@ border-right: 3px lightgreen solid;
 
 #title
 {
-    color: white;
+    color: green;
 margin-top: 130px;
 font-size: 23px;
+font-weight: bolder;
 }
 
 #donateDIV{
@@ -257,6 +263,11 @@ display: flex;
     height: 65px;
 }
 
+.green-colored{
+	color: #3a8905;
+	font-weight: bold;
+}
+
 .totem-btn:hover
 {
 	padding-bottom: 5px;
@@ -276,43 +287,95 @@ display: flex;
 }
 #totem-pic:hover{
 	padding: 2px;
-	border: 2px green solid;
-    box-shadow: 0px 0px 2px green;
+	border: 2px #3a8905 solid;
+    box-shadow: 0px 0px 2px #3a8905;
 
 }
 
+.wordNsignDiv{
+	display: flex;
+}
 
+.mulungereza{
+	color: gray;
+	font-size: 12px;
+	margin-left:15px;
+}
 
  .descDiv
  {
- 	padding-top: 10px;
+ 	margin: 10px 0 25px;
+ 	padding: 5px 0 15px;
+ 	background-color: rgba(255,255,255,0.8);
+ 	overflow-x: hidden;
+ 	height: 322px
  }
+
+  #dictWord{font-size: 40px;
+
+  	}
+
+  
 
  #dictWord, #translato, #lilDescr, #useofWord, #relatedWords
  {
  	margin-left: 40px;
  }
 
+#GoodBad-Sign{
+	margin: 25px 0 0 15px;
+	width: 20px;
+	border-radius: 20px;
+	height: 10px;
+	background-color: red;
+}
 #devpic
 {
     width: 200px;
+    border-radius: 120px;
 }
 #wordtype
 {
-	margin: 5px 0px;
+	margin: 5px 40px;
+	font-size: 20px;
+}
+#translato{
+	margin: -6px 0 0 5px;
+	font-size: 22px;}
+
+#useofWord{
+color: black;
+margin: 5px 0 15px 40px;
 }
 
+#lilDescr{
+margin: 5px 0 15px 40px;
+  	color: green;
+  }
 
+#relatedWords{
+	color: blue;
+	margin-left: 5px;
+}
 
 #close{
 	border-radius: 100%;
-	width: 10px;
-	background-image: url("./components/img/close.png");
-	background-size: 20px;
-	border: 1px black solid;
-	margin: 2px;
+	padding: 0px 0px;
+	height: 2px;
+	margin: 10px 0 0 5px;
 }
 
+#name-NT{
+	font-weight: bold;
+	color: #3a8905;
+	padding: 2px;
+}
+
+#totem-NT
+{	font-weight: bold;
+	color: #87a841;
+	padding: 2px;
+}
 
 #clicked-Name:hover{
 
@@ -323,10 +386,12 @@ font-size: 15px
 
 #inputbox{
     height: 25px;
-    background-color: lightgray;
+    background-color: #ffffff;
+    color: #3a8905;
     margin: 0px 0px 5px;
-
+    border: 3px  #87a841 solid;
 }
+
 
 
 ::-webkit-scrollbar{
@@ -353,8 +418,8 @@ font-size: 15px
 
 #omubalaCard{
 	font-size: 15px;
-	color: red;
-	margin: 40px 10px 30px;
+	color: #e88a20;
+	margin: 30px 10px 15px;
 }
 
 #inputing
@@ -365,7 +430,7 @@ font-size: 10px;
 h1,h2,h3,h4,p{
     margin: 0;
     padding: 0;
-    color: green;
+    color: #87a841;
 }
 
 h1{font-size: 25px;}
@@ -385,16 +450,9 @@ mm
 .names-widget{
 	height: 405px;
     padding: 5px 10px;
-    background-color: #ffffff;
+    background-color: rgba(255,255,255, 0.8);
 }
 
-body{
-    background-image: url("./components/img/mpologoma.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-}
 
 
 .nav-link{
@@ -433,17 +491,15 @@ margin: 0 auto 0
 
 .card-body
 {
-    background: white;
     width: 285px;
     height: 290px;
-    overflow: overlay;
+    overflow-x: hidden;
     border-radius: 10px;
-    border: 2px green solid;
+    box-shadow: 1px 1px 15px #87a841;
 }
 
 .shortlists{
-background-color: #ffffff;
-height: 60px;
+	padding: 2px;
 overflow: scroll;
     }
 
@@ -468,7 +524,7 @@ overflow: scroll;
 #akabiro{
 	padding: 40px 0 0px;
 	float: right;
-		color: green;
+		color: #87a841;
 	font-weight: bold;
 	font-size: 15px;
 
@@ -476,13 +532,13 @@ overflow: scroll;
 
 
 .akabiroDiv{
-    margin-top: -25px ;
+    margin: -25px 10px 0 0 ;
     display: flex;
     width: 230px;
 
 }
 
-.akabiDV{margin-left: 10px}
+.akabiDV{margin-left: 5px}
 .akabiroimg
 {
 width: 70px;
@@ -533,13 +589,13 @@ overflow: scroll;
 
 
 .tabs{
-  background-color: white;
+  background-color: rgba(255,255,255,0.8);
 
 
 }
 
 .tab-list {
-	margin: 0px 145px 0px 145px ;
+	margin: 0px 140px 0px 140px ;
   padding-left: 0;
 }
 
@@ -549,19 +605,20 @@ overflow: scroll;
   display: inline-block;
   list-style: none;
   padding: 0.4rem 1.75rem;
+  color: #3a8905;/*green*/
 
 }
 .tab-list-item:hover{
-    background: lightgreen;
+    background: #87a841;
+  color: #ffffff;
+
     
 }
 
 .tab-list-active {
+
+	font-weight: bold;
     
-  border-bottom: 3px green solid;
+  border-bottom: 3px #3a8905 solid;
 }
 
-.tab-content
-{
-    background-color: #ffffff;
-}
