--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-image: url("./components/img/nsenene.jpg");
+    background-image: url("./components/img/mpologoma.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -11,24 +11,15 @@ body{
 }
 
 
-.writebox{
-    background-color: white;
-    opacity: 0.9;
-    display: flex;
-    border-radius: 4px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-    margin-top: 45px;
-    margin-bottom: 45px;
-}
 
 .navInput
 {height: 25px;
 margin: 5px auto 0px;}
 
-.flexa{
+/*.flexa{
     display: flex;
     margin: 50px auto 50px;
-}
+}*/
 
 .name-body{
     margin-top: 2px;
@@ -54,11 +45,6 @@ section
     /*text-shadow: 0px 0px 1px orange;*/
 }
 
-#phnnumbers{
-	padding: 5px;
-	/*border: 1px lightgreen solid;*/
-	margin: 10px auto ;
-}
 
 #rotated-div
 {
@@ -89,35 +75,13 @@ section
     transform: skewY(-2deg);
 }
 
-.projComp
-{
-	border: none;
-    background-color: rgba(255,255,255,0.99);
-    padding: 20px;
-    margin: 10px 10px 10px 10px;
-    width: 380px;
-    height: 200px;
-    border-radius: 10px;
-    box-shadow: 1px 3px 10px black;
-}
-.projComp:hover
-{
-    background-color: rgba(255,255,255,0.95);
-    
-}
 
 .main-tasks{
 
     margin-top: 50px;
 }
 
-.components
-{
-display: flex;
-max-width: 650px;
-margin: 10px auto 80px;
 
-}
 
 #heading
 {
@@ -139,17 +103,8 @@ font-size: 18px;
     /*border-top: 2px green solid; */
 }
 
-.footerparts{
-    width: 320px;
-    border: 3px white solid;
-}
 
-.footing{
-    box-shadow: 1px 1px 30px black;
-    background: darkgreen;
-    padding: 10px 60px;
-    display: flex;
-}
+
 
 .no-skew
 {
@@ -163,15 +118,6 @@ font-size: 18px;
     opacity: 0.9; 
 }
 
-.donation
-{
-border-right: 3px lightgreen solid;
-
-    margin: 20px 10px;
-    padding: 10px;
-    width: 500px;
-    /*margin: 0px 0px 0px 0px;*/
-}
 
 
 #comment-Name-DateDiv{
@@ -190,12 +136,7 @@ border-right: 3px lightgreen solid;
     height: 50px;
 }
 
-.comments-list
-{
-	height: 250px;
-	overflow: scroll;
-	background-color: rgba(255,255,255, 0.9);
-}
+
 #comment-input-N-btn
 {
 	display: flex;
@@ -226,26 +167,11 @@ height: 100px;
 	float: right;
 }
 
-.devbox
-{
-    border: 1px white solid;
-    margin: 5px;
-    padding: 5px;
-    max-width: 600px;
-}
-
-.devflex
-{
-display: flex;
-}
 
 
 .about{margin-right: 50px }
 
-.devstats{
-    max-width: 300px;
-    padding: 10px 10px;
-}
+
  
  .mzirochippic{
     border-radius: 60%;
@@ -342,11 +268,7 @@ display: flex;
 	height: 10px;
 	background-color: red;
 }
-#devpic
-{
-    width: 200px;
-    border-radius: 120px;
-}
+
 #wordtype
 {
 	margin: 5px 40px;
@@ -495,10 +417,7 @@ margin: 0 auto 0
     margin: 2px 0 2px;
 }
 
-#adboard
-{
-    background-color: white;
-}
+
 
 .lineup{display: flex;}
 
@@ -611,37 +530,180 @@ margin: -5px 0px 0px -5px;
 }
 
 
-.tabs{
-  background-color: rgba(255,255,255,0.8);
+.tabs{background-color: rgba(255,255,255,0.8);}
 
+/*.tab-list {
+}*/
 
-}
-
-.tab-list {
-	margin: 0px 140px 0px 140px ;
-  padding-left: 0;
-}
-
-.tab-list-item {
+/*.tab-list-item {
     background: none;
     border: none;
   display: inline-block;
   list-style: none;
   padding: 0.4rem 1.75rem;
-  color: #3a8905;/*green*/
+  color: #3a8905;}*/
 
-}
-.tab-list-item:hover{
+/*.tab-list-item:hover{
     background: #87a841;
-  color: #ffffff;
+  color: #ffffff;    }*/
 
+/*.tab-list-active {
+    font-weight: bold;
+    border-bottom: 3px #3a8905 solid;}
+
+*/
+
+/* this part is for media queries*/
+
+
+/*this is for tablet screen ================================================================================================================================*/ 
+@media only screen and (min-width: 768px){
+
+.components{ display: flex; }
+
+   .projComp
+{
+    width: 50%;
+    height: 50%;
+}
+
+
+
+
+}
+
+/*this is for phone screen================================================================================================================================*/ 
+@media only screen and (min-width: 375px){
+
+   
+    .projComp
+{
+    border: none;
+    background-color: rgba(255,255,255,0.99);
+    padding: 20px;
+    margin: 10px auto 10px;
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    box-shadow: 1px 3px 10px black;
+}
+.projComp:hover{background-color: rgba(255,255,255,0.95);}
+
+
+.tab-list {
+    padding: 0;
+    margin: 0 auto;
+    display: flex;
+}
+
+.tab-list-item {
+    background: none;
+    border: none;
+  list-style: none;
+  padding: 0.3rem 1.5rem;
+  color: #3a8905;}
+
+  .tab-list-item:hover{
+    background: #87a841;
+  color: #ffffff;    }
+
+  .tab-list-active {
+    font-weight: bold;
+    border-bottom: 3px #3a8905 solid;}
+
+    .flexa{
+    margin: 50px auto 50px;}
+
+    #adboard{
+    margin: 20px 0 0 0;
+    height: 200px;
+    background-color: white;}
+
+.devflex
+{
+display: flex;
+}
+
+#devpic
+{
+    width: 50%;
+    border-radius: 100%;
+}
+
+.devbox
+{
+    padding: 10px;
+    border: 1px green solid;
+    margin: 5px 0;
+}
+
+.devstats{
+    /*border: 1px green solid;*/
+    margin: 0 0 0 10px;
+}
+
+p{
+    justify-content: all;
+}
+
+.aboutContent{
+    padding: 400px 0;
+}
+
+.writebox{
+    background-color: white;
+    opacity: 0.9;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+   
+}
+
+.donation{
+    padding: 10px;
+    border-bottom: 3px darkgreen solid;
     
 }
 
-.tab-list-active {
 
-	font-weight: bold;
-    
-  border-bottom: 3px #3a8905 solid;
+#phnnumbers{
+    padding: 5px;
+    margin: 5px auto;
+    width: 60%;
 }
+
+.comments-list
+{
+    /*height: 250px;*/
+    overflow: scroll;
+    background-color: rgba(255,255,255, 0.9);
+}
+
+#commentBtn{margin: 0 0 0 5px;}
+
+.dispPhNumber{display: none;}
+
+#displayNumberbtn{ margin: 10px;}
+
+.footing{
+    background-color: darkgreen;
+}
+
+.footerparts{
+}
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
