--- a/src/App.css
+++ b/src/App.css
@@ -511,7 +511,9 @@ margin: -5px 0px 0px -5px;
 
 
 
-
+/*this is for desktop screen ================================================================================================================================*/ 
+.container{ width: 100%; margin: 0 auto; }
+#devpic{width: 30%; border-radius: 100%; }
 
 
 
@@ -523,11 +525,18 @@ margin: -5px 0px 0px -5px;
 /*this is for tablet screen ================================================================================================================================*/ 
 @media only screen and (min-width: 768px){
 .container{ width: 80%; margin: 0 auto; }
-.components{ display: flex; /*width: 80%;*/ margin: 0 auto; }
-.projComp{   }
+.components{ display: flex; }
+.projComp{width: 100%}
 .no-skew{width: 80%;}
-#devpic{width: 30%; border-radius: 100%;}
+#devpic{ min-width: 45%; border-radius: 100%; }
+.Devs{display: flex;}
+.writebox{ display: flex; margin-bottom: 40px }
+.donation{ padding: 10px 2px; width: 120%; border-right: 2px darkgreen solid;  }
+.footing{background-color: darkgreen;}
+.footerData{display: flex;}
+.footerparts{ margin: 20px 0px 10px; width: 30%; }
 
+/*#phnnumbers{ font-size: 18px }*/
 
 
 
@@ -536,28 +545,18 @@ margin: -5px 0px 0px -5px;
 /*this is for phone screen================================================================================================================================*/ 
 @media only screen and (min-width: 375px){
 
-   
-    .projComp{
+.components{ max-width: 80%; margin: 0 auto;}
+ .projComp{
     border: none;
     background-color: rgba(255,255,255,0.99);
     padding: 20px;
     margin: 10px 10px 10px;
-    width: 95%;
+    max-width: 100%;
     height: 250px;
     border-radius: 10px;
     box-shadow: 1px 3px 10px black;}
-
 .projComp:hover{background-color: rgba(255,255,255,0.95);}
-
-
-#title
-{
-    color: green;
-margin-top: 150px;
-font-size: 23px;
-font-weight: bold;
-}
-
+#title{ color: green; margin-top: 150px; font-size: 24px; font-weight: bold; }
 .tabs{background-color: rgba(255,255,255,0.8);}
 
 .tab-list {
@@ -581,62 +580,26 @@ font-weight: bold;
     font-weight: bold;
     border-bottom: 3px #3a8905 solid;}
 
-    .aboutSection
-{
-    padding: 10px 0px 30px;
+    .aboutSection{ padding: 10px 0px 30px;
     width: 100%;
     background-color: rgba(255,255,255,0.99);
     box-shadow: 1px 1px 30px black;
     transform: skewY(2deg);
     margin-bottom: 60px;
 }
-
-.no-skew
-{
-    transform: skewY(-2deg);
-    margin: 30px auto 0;
-
-}
-
-    .flexa{
-    margin: 50px auto 50px;}
+    .no-skew{ transform: skewY(-2deg); margin: 30px auto 30px; }
+    .flexa{ margin: 50px auto 50px; }
 
     #adboard{
     margin: 20px 0 0 0;
     height: 200px;
     background-color: white;}
 
-    #DevTitle
-{
-    color: green;
-margin: 30px auto 0;
-font-size: 23px;
-font-weight: bold;
-}
-
-
-.devflex
-{
-display: flex;
-}
-
-#devpic
-{
-    width: 50%;
-    border-radius: 100%;
-}
-
-.devbox
-{
-    padding: 10px;
-    border: 1px green solid;
-    margin: 5px 0;
-}
-
-.devstats{
-    /*border: 1px green solid;*/
-    margin: 20px 0 0 10px;
-}
+#DevTitle{ color: green; margin: 30px auto 0; font-size: 23px; font-weight: bold; }
+.devflex{ display: flex;}
+#devpic{ max-width: 50%; border-radius: 100%;}
+.devbox{ padding: 10px; border: 1px green solid; margin: 5px 2px; }
+.devstats{ margin: 20px 0 0 10px; }
 
 p{
     justify-content: all;
@@ -647,15 +610,9 @@ p{
     background-color: white;
     opacity: 0.9;
     border-radius: 4px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-   
-}
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5); }
 
-.donation{
-    padding: 10px;
-    border-bottom: 3px darkgreen solid;
-    
-}
+.donation{ padding: 10px; border-bottom: 2px darkgreen solid;}
 
 
 #phnnumbers{
@@ -677,12 +634,7 @@ p{
 
 #displayNumberbtn{ margin: 10px;}
 
-.footing{
-    background-color: darkgreen;
-}
-
-.footerparts{
-}
+.footing{background-color: darkgreen; }
 
 
 }
