add some new css to responiveness

--- a/src/App.css
+++ b/src/App.css
@@ -452,12 +452,19 @@ overflow: scroll;
 
 
 /*this is for desktop screen ================================================================================================================================*/ 
+@media only screen and ( min-width: 1024px){
+
 .container{ width: 100%; margin: 0 auto; }
 #devpic{width: 30%; border-radius: 100%; }
+.flexa{ padding: 30px 0 30px 0; display: flex; }
+ #adboard{  min-height: 400px; }
+ /*.NamesBinder{  }*/
+/*.poolOfnames{ display: table-footer-group; }*/
 
 
 
 
+}
 
 
 
@@ -476,8 +483,8 @@ overflow: scroll;
 .footerData{display: flex;}
 .footerparts{ margin: 20px 0px 10px; width: 30%; }
 
-.imgDiv{ min-height: 300px; }
-.cardimg { margin-top: -40px;  }
+.imgDiv{ width: 115%;  min-height: 310px;  }
+.cardimg {  margin-top: -10px}
 
 
 
@@ -514,7 +521,7 @@ overflow: scroll;
 
   .tab-list-item:hover{
     background: #87a841;
-  color: #ffffff;    }
+  color: #ffffff; }
 
   .tab-list-active {
     font-weight: bold;
@@ -535,25 +542,22 @@ overflow: scroll;
 #akabiro{ padding: 40px 5px 0px; /*float: right;*/ color: #87a841; font-weight: bold; font-size: 15px; width: 120px; }
 .akabiroimg{ width: 70px; border-radius: 90%; border: 3px white solid; position: relative; }
 .poolOfnames{ padding: 2px 5px 8px 5px; display: flex; overflow-x: scroll; overflow-y: hidden }
-.names-widget{height: 460px; padding: 5px 10px; background-color: rgba(255,255,255, 0.8); }
+.names-widget{height: 460px; padding: 5px 10px; background-color: rgba(255,255,255, 0.8); margin-bottom: 20px; }
 .aboutSection{ padding: 10px 0px 30px; width: 100%; background-color: rgba(255,255,255,0.99); box-shadow: 1px 1px 30px black; transform: skewY(2deg);  margin-bottom: 60px; }
 .no-skew{ transform: skewY(-2deg); margin: 30px auto 30px; }
-.flexa{ margin: 50px auto 50px; }
 
-    #adboard{
-    margin: 20px 0 0 0;
-    height: 200px;
-    background-color: white;}
+ #adboard{ margin: 0 0 20px 0; height: 200px; background-color: white; }
+
 
 #DevTitle{ color: green; margin: 30px auto 0; font-size: 23px; font-weight: bold; }
 .devflex{ display: flex;}
 #devpic{ max-width: 50%; border-radius: 100%;}
 .devbox{ padding: 10px; border: 1px green solid; margin: 5px 2px; }
 .devstats{ margin: 20px 0 0 10px; }
-
-p{
-    justify-content: all;
-}
+.devProBox{  width: 300px; height: 50px; padding:12px 2px; }
+#devParagraph{margin: 15px 5px;}
+#professions{ font-size: 15px; font-weight: bold; color: #ffffff; background-color: lightblue; width: 280px; margin: 5px 2px; padding: 8px; border-radius: 10px; }
+p{ justify-content: all;}
 
 
 .writebox{
