--- a/src/App.css
+++ b/src/App.css
@@ -458,8 +458,12 @@ overflow: scroll;
 #devpic{width: 30%; border-radius: 100%; }
 .flexa{ padding: 30px 0 30px 0; display: flex; }
  #adboard{  min-height: 400px; }
- /*.NamesBinder{  }*/
-/*.poolOfnames{ display: table-footer-group; }*/
+
+ .NamesBinder{ display: flex; }
+.poolOfnames{ display: table-footer-group; }
+.shortlist-Space{ display: table-header-group; }
+
+#professions{ font-size: 20px;  padding: px;  }
 
 
 
@@ -554,9 +558,9 @@ overflow: scroll;
 #devpic{ max-width: 50%; border-radius: 100%;}
 .devbox{ padding: 10px; border: 1px green solid; margin: 5px 2px; }
 .devstats{ margin: 20px 0 0 10px; }
-.devProBox{  width: 300px; height: 50px; padding:12px 2px; }
+.devProBox{  height: 100px; padding:12px 2px; }
 #devParagraph{margin: 15px 5px;}
-#professions{ font-size: 15px; font-weight: bold; color: #ffffff; background-color: lightblue; width: 280px; margin: 5px 2px; padding: 8px; border-radius: 10px; }
+#professions{ font-size: 12px; font-weight: bold; color: #ffffff; background-color: lightblue; margin: 5px 2px; padding: 5px; border-radius: 10px; }
 p{ justify-content: all;}
 
 
