--- a/src/App.css
+++ b/src/App.css
@@ -1,445 +1,3 @@
-*{
-    font: 400 16px/1.6 Rubik, sans-serif;
-}
-
-body{
-    background-image: url("./components/img/mpologoma.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-}
-
-
-
-.navInput
-{height: 25px;
-margin: 5px auto 0px;}
-
-/*.flexa{
-    display: flex;
-    margin: 50px auto 50px;
-}*/
-
-
-
-#nameItem-span{
-	margin: 0;
-}
-section
-{
-    padding:  5px 50px;
-    border-radius: 2px;
-}
-
-
-
-#instructions{
-	color: orange;
-    /*text-shadow: 0px 0px 1px orange;*/
-}
-
-
-#rotated-div
-{
-    margin-top: -55px;
-    transform: skewY(2deg);
-    background-color: rgba(255,255,255,0.99);
-    height: 150px;
-    /*box-shadow: 1px 1px 1px lightgreen;*/
-    /*border-bottom: 1px black solid;*/
-}
-#rotated-div:hover
-{
-    /*transform: skewY(-1deg);*/
-    background-color: rgba(255,255,255,0.95);
-}
-
-.navfonts{
-
-	color: green;
-	font-size: 16px;
-}
-
-
-
-#anti-rotated-div
-{
-    padding-top: 50px;
-    transform: skewY(-2deg);
-}
-
-
-.main-tasks{
-
-    margin-top: 50px;
-}
-
-
-
-#heading
-{
-font-size: 18px;
-    max-width: 630px;
-    margin: 10px auto 10px auto;
-    text-shadow: 2px 2px 1px black;
-
-}
-
-
-
-
-
-.lowest{
-    border-top: 2px white solid;
-    background: black;
-    padding: 20px 50px;
-    opacity: 0.9; 
-}
-
-
-
-#comment-Name-DateDiv{
-	display: flex;
-	border: 3px black solid;
-}
-.comment{
-
-    margin: 20px 10px;
-    padding: 10px;
-}
-#commentInput{
-
-    background-color: lightgray;
-    width: 500px;
-    height: 50px;
-}
-
-
-#comment-input-N-btn
-{
-	display: flex;
-}
-
-
-
-#donateDIV{
-
-height: 100px;
-	margin-bottom: 10px;
-	/*border: 10px blue solid;*/
-}
-
-.donate-btn
-{
-    border-radius: 5px;
-    border: none;
-    background-color: orange;
-    padding: 12px;
-    max-width:300px;
-	float: right;
-    margin: 20px 0 0 0;
-}
-
-
-
-.about{margin-right: 50px }
-
-
- 
- .mzirochippic{
-    border-radius: 60%;
-    width: 40px; 
-}
-
-/*#myButton{
-
-	background-color: red;
-	padding: 30px;
-}
-*/
-
-.totem-btn
-{
-	padding: 1px;
-    background: none;
-    border: none;
-    width: 80px;
-    height: 65px;
-}
-
-.green-colored{
-	color: #3a8905;
-	font-weight: bold;
-	/*height: 5px;*/
-
-}
-
-.green-colored:hover{
-	color: darkgreen;
-	font-size: 15px;
-
-}
-
-.totem-btn:hover
-{
-	padding-bottom: 5px;
-	width: 80px;
-}
-
-
-
-#totem-pic{
-	padding: 1px;
-    border-radius: 60%;
-}
-
-#totem-pic:hover{
-	padding: 2px;
-	border: 2px #3a8905 solid;
-    box-shadow: 0px 0px 2px #3a8905;
-
-}
-
-.wordNsignDiv{
-	display: flex;
-}
-
-.mulungereza{
-	color: gray;
-	font-size: 12px;
-	margin-left:15px;
-}
-
- .descDiv
- {
- 	margin: 10px 0 25px;
- 	padding: 5px 0 15px;
- 	background-color: rgba(255,255,255,0.8);
- 	overflow-x: hidden;
- 	height: 322px
- }
-
-  #dictWord{font-size: 40px;
-
-  	}
-
-
-
- #dictWord, #translato, #lilDescr, #useofWord, #relatedWords
- {
- 	margin-left: 40px;
- }
-
-#GoodBad-Sign{
-	margin: 25px 0 0 15px;
-	width: 20px;
-	border-radius: 20px;
-	height: 10px;
-	background-color: red;
-}
-
-#wordtype
-{
-	margin: 5px 40px;
-	font-size: 20px;
-}
-#translato{
-	margin: -6px 0 0 5px;
-	font-size: 22px;}
-
-#useofWord{
-color: black;
-margin: 5px 0 15px 40px;
-}
-
-#lilDescr{
-margin: 5px 0 15px 40px;
-  	color: green;
-  }
-
-#relatedWords{
-	color: blue;
-	margin-left: 5px;
-}
-
-#close{
-	border-radius: 100%;
-	padding: 0px 0px;
-	height: 2px;
-	margin: 10px 0 0 5px;
-}
-
-#name-NT{
-	font-weight: bold;
-	color: #3a8905;
-	padding: 2px;
-}
-
-#totem-NT
-{	font-weight: bold;
-	color: #87a841;
-	padding: 2px;
-}
-
-#clicked-Name:hover{
-
-font-size: 15px
-}
-
-
-
-#inputbox{
-    height: 25px;
-    background-color: #ffffff;
-    color: #3a8905;
-    margin: 0px 0px 5px;
-    border: 3px  #87a841 solid;
-}
-
-
-
-::-webkit-scrollbar{
-    height: 5px;
-     width: 5px; 
-}
-
-
-
-::-webkit-scrollbar-track{
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb{
-    border-radius: 20px;
-    background-color: green;
-}
-
-
-::-webkit-scrollbar-thumb:hover{
-    border-radius: 20px;
-    background-color: green;
-}
-
-#omubalaCard{
-	font-size: 15px;
-	color: #e88a20;
-	margin: 30px 10px 15px;
-}
-
-#inputing
-{
-font-size: 10px;
-}
-
-h1,h2,h3,h4,p{
-    margin: 0;
-    padding: 0;
-    color: #87a841;
-}
-
-h1{font-size: 25px;}
-h2{font-size: 20px;}
-h3{font-size: 15px; color: white}
-h4{ padding: 0; margin: 0; font-size: 12px; }
-mm
-.col-lg-5{
-    padding: 0;
-    
-}
-.form-control
-{
-    border-radius: 10px;
-
-}
-
-
-
-.nav-link{
-    color: green;
-}
-
-.item
-{
-background-color: green;
-    padding: 5px 10px;
-    border-radius: 60px;
-    margin: 2px 1px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #ffffff;
-}
-
-.container2
-{
-	width: 90%;
-margin: 0 auto 0 
-}
-
-#logopic
-{
-    width: 180px;
-    margin: 2px 0 2px;
-}
-
-
-
-.lineup{display: flex;}
-
-
-
-
-.shortlists{
-	padding: 2px;
-overflow: scroll;
-    }
-
-
-.cardheader
-{
-    display: flex;
-}
-
-.no-padding{
-    padding: 0;
-    margin: 0;
-    align-content: flex-start;
-}
-
-
-
-
-/*.akabiDV{margin-left: 0px}*/
-
-
-.col-lg-9, .col-lg-3{padding: 0}
-
-#omuziroCardName{
-	color: green;
-	font-weight: bold;
-	font-size: 23px;
-}
-
-
-#nam{
-    padding: 0;
-    margin: 0;
-    font-size: 30px;
-    
-}
-
-
-
-
-#ebirala
-{
-    margin: 0px 0px 0px 0px;
-    padding: 0;
-    border: none;
-    background:none;
-    font-size: 12px;
-    float: right;
-}
 
 
 
@@ -450,22 +8,20 @@ overflow: scroll;
 #devpic{width: 20%; min-height: 210px; border-radius: 100%; }
 .flexa{ padding: 30px 0 30px 0; display: flex; }
  #adboard{  min-height: 400px; }
- .NamesBinder{ display: flex; display: table }
-.poolOfnames{ display: table-footer-group; }
-.shortlist-Space{ display: table-header-group; }
+ .NamesBinder{ display: flex; }
+.poolOfnames{ padding: 0 5px ; }
+.shortlist-Space{ max-width: 600px; margin-right: 10px;}
 #professions{ font-size: 20px; }
-.Devs{display: flex; margin: -80px auto; transform: scale(0.75); }
+.Devs{ display: flex; margin: -80px auto; transform: scale(0.75); }
 .devSection{ }
-.imgDiv{ margin-top: -70px; margin-left: -30px; width: 300px; height: 210px; transform: rotate(7deg); overflow: hidden; }
-
-
-
+/*.imgDiv{ margin-top: -70px; margin-left: -30px; width: 300px; height: 210px; transform: rotate(7deg); overflow: hidden; }*/
+.imgDiv{ max-height: 310px; }
+.cardimg { /*max-width: 25%;*/ }
+#Card-cont{ max-width: 300px; }
 
 
 
 }
-
-
 
 
 /*this is for tablet screen ================================================================================================================================*/ 
@@ -482,8 +38,8 @@ overflow: scroll;
 .footerData{display: flex;}
 .footerparts{ margin: 20px 0px 10px; width: 30%; }
 
-.imgDiv{ width: 115%;  min-height: 310px;  }
-.cardimg {  margin-top: -10px}
+.imgDiv{ /*width: 115%;*/  min-height: 130%;  }
+.cardimg {  margin-top: -10px }
 
 
 
@@ -529,8 +85,13 @@ overflow: scroll;
 
 .totems{ padding: 0; display: flex; overflow-x: scroll; overflow-y: hidden }
 /*.name-body{display: table-header-group;}*/
-.shortlist-Space{  padding:0; background-color: rgba(255,255,255,0.1);}
-.card-body{ overflow-x: hidden; border-radius: 10px; box-shadow: 1px 1px 50px #87a841; }
+
+.NamesBinder{  }
+.poolOfnames{ padding: 5px 0; overflow-x: scroll; overflow-y: hidden }
+.shortlist-Space{ padding-top: 5px; background-color: rgba(255,255,255,0.1);  }
+
+
+.card-body{ overflow-x: hidden; border-radius: 10px; box-shadow: 1px 1px 50px #87a841;  border: 1px #87a841 solid; }
 #Card-cont{ height: 300px;  padding: 5px 5px; overflow-x: hidden; border-radius: 15px; }
 
 .imgDiv{ margin-top: -70px; margin-left: -30px; min-width: 130%; height: 210px; transform: rotate(7deg); overflow: hidden; }
@@ -539,8 +100,7 @@ overflow: scroll;
 .akabiroDiv{ margin: -25px 0px 10px 0; z-index: 1; float: right; position: relative; display: flex;  }
 #akabiro{ padding: 40px 5px 0px; /*float: right;*/ color: #87a841; font-weight: bold; font-size: 15px; width: 120px; }
 .akabiroimg{ width: 70px; border-radius: 90%; border: 3px white solid; position: relative; }
-.poolOfnames{ padding: 2px 5px 8px 5px; display: flex; overflow-x: scroll; overflow-y: hidden }
-.names-widget{height: 460px; padding: 5px 10px; background-color: rgba(255,255,255, 0.8); margin-bottom: 20px; }
+.names-widget{/*height: 460px; */padding: 10px 10px; background-color: rgba(255,255,255, 0.8); margin-bottom: 20px; }
 .aboutSection{ padding: 10px 0px 30px; width: 100%; background-color: rgba(255,255,255,0.99); box-shadow: 1px 1px 30px black; transform: skewY(2deg);  margin-bottom: 60px; }
 .devSection{ padding: 10px 0px 30px; width: 100%; background-color: rgba(255,255,255,0.99); /*box-shadow: 1px 1px 30px black;*/ /*transform: skewY(2deg);*/  margin-bottom: 60px; }
 .no-skew{ transform: skewY(-2deg); margin: 30px auto 30px; }
@@ -589,6 +149,454 @@ p{ justify-content: all;}
 #displayNumberbtn{ margin: 10px;}
 
 .footing{background-color: darkgreen; }
+
+
+
+/*this is where all the other data start*/
+
+*{
+    font: 400 16px/1.6 Rubik, sans-serif;
+}
+
+body{
+    background-image: url("./components/img/mpologoma.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+
+
+.navInput
+{height: 25px;
+margin: 5px auto 0px;}
+
+/*.flexa{
+    display: flex;
+    margin: 50px auto 50px;
+}*/
+
+
+
+#nameItem-span{
+    margin: 0;
+}
+section
+{
+    padding:  5px 50px;
+    border-radius: 2px;
+}
+
+
+
+#instructions{
+    color: orange;
+    /*text-shadow: 0px 0px 1px orange;*/
+}
+
+
+#rotated-div
+{
+    margin-top: -55px;
+    transform: skewY(2deg);
+    background-color: rgba(255,255,255,0.99);
+    height: 150px;
+    /*box-shadow: 1px 1px 1px lightgreen;*/
+    /*border-bottom: 1px black solid;*/
+}
+#rotated-div:hover
+{
+    /*transform: skewY(-1deg);*/
+    background-color: rgba(255,255,255,0.95);
+}
+
+.navfonts{
+
+    color: green;
+    font-size: 16px;
+}
+
+
+
+#anti-rotated-div
+{
+    padding-top: 50px;
+    transform: skewY(-2deg);
+}
+
+
+.main-tasks{
+
+    margin-top: 50px;
+}
+
+
+
+#heading
+{
+font-size: 18px;
+    max-width: 630px;
+    margin: 10px auto 10px auto;
+    text-shadow: 2px 2px 1px black;
+
+}
+
+
+
+
+
+.lowest{
+    border-top: 2px white solid;
+    background: black;
+    padding: 20px 50px;
+    opacity: 0.9; 
+}
+
+
+
+#comment-Name-DateDiv{
+    display: flex;
+    border: 3px black solid;
+}
+.comment{
+
+    margin: 20px 10px;
+    padding: 10px;
+}
+#commentInput{
+
+    background-color: lightgray;
+    width: 500px;
+    height: 50px;
+}
+
+
+#comment-input-N-btn
+{
+    display: flex;
+}
+
+
+
+#donateDIV{
+
+height: 100px;
+    margin-bottom: 10px;
+    /*border: 10px blue solid;*/
+}
+
+.donate-btn
+{
+    border-radius: 5px;
+    border: none;
+    background-color: orange;
+    padding: 12px;
+    max-width:300px;
+    float: right;
+    margin: 20px 0 0 0;
+}
+
+
+
+.about{margin-right: 50px }
+
+
+ 
+ .mzirochippic{
+    border-radius: 60%;
+    width: 40px; 
+}
+
+/*#myButton{
+
+    background-color: red;
+    padding: 30px;
+}
+*/
+
+.totem-btn
+{
+    padding: 1px;
+    background: none;
+    border: none;
+    width: 80px;
+    height: 65px;
+}
+
+.green-colored{
+    color: #3a8905;
+    font-weight: bold;
+    /*height: 5px;*/
+
+}
+
+.green-colored:hover{
+    color: darkgreen;
+    font-size: 15px;
+
+}
+
+.totem-btn:hover
+{
+    padding-bottom: 5px;
+    width: 80px;
+}
+
+
+
+#totem-pic{
+    padding: 1px;
+    border-radius: 60%;
+}
+
+#totem-pic:hover{
+    padding: 2px;
+    border: 2px #3a8905 solid;
+    box-shadow: 0px 0px 2px #3a8905;
+
+}
+
+.wordNsignDiv{
+    display: flex;
+}
+
+.mulungereza{
+    color: gray;
+    font-size: 12px;
+    margin-left:15px;
+}
+
+ .descDiv
+ {
+    margin: 10px 0 25px;
+    padding: 5px 0 15px;
+    background-color: rgba(255,255,255,0.8);
+    overflow-x: hidden;
+    height: 322px
+ }
+
+  #dictWord{font-size: 40px;
+
+    }
+
+
+
+ #dictWord, #translato, #lilDescr, #useofWord, #relatedWords
+ {
+    margin-left: 40px;
+ }
+
+#GoodBad-Sign{
+    margin: 25px 0 0 15px;
+    width: 20px;
+    border-radius: 20px;
+    height: 10px;
+    background-color: red;
+}
+
+#wordtype
+{
+    margin: 5px 40px;
+    font-size: 20px;
+}
+#translato{
+    margin: -6px 0 0 5px;
+    font-size: 22px;}
+
+#useofWord{
+color: black;
+margin: 5px 0 15px 40px;
+}
+
+#lilDescr{
+margin: 5px 0 15px 40px;
+    color: green;
+  }
+
+#relatedWords{
+    color: blue;
+    margin-left: 5px;
+}
+
+#close{
+    border-radius: 100%;
+    padding: 0px 0px;
+    height: 2px;
+    margin: 10px 0 0 5px;
+}
+
+#name-NT{
+    font-weight: bold;
+    color: #3a8905;
+    padding: 2px;
+}
+
+#totem-NT
+{   font-weight: bold;
+    color: #87a841;
+    padding: 2px;
+}
+
+#clicked-Name:hover{
+
+font-size: 15px
+}
+
+
+
+#inputbox{
+    height: 25px;
+    background-color: #ffffff;
+    color: #3a8905;
+    margin: 0px 0px 5px;
+    border: 3px  #87a841 solid;
+}
+
+
+
+::-webkit-scrollbar{
+    height: 5px;
+     width: 5px; 
+}
+
+
+
+::-webkit-scrollbar-track{
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color: green;
+}
+
+
+::-webkit-scrollbar-thumb:hover{
+    border-radius: 20px;
+    background-color: green;
+}
+
+#omubalaCard{
+    font-size: 15px;
+    color: #e88a20;
+    margin: 30px 10px 15px;
+}
+
+#inputing
+{
+font-size: 10px;
+}
+
+h1,h2,h3,h4,p{
+    margin: 0;
+    padding: 0;
+    color: #87a841;
+}
+
+h1{font-size: 25px;}
+h2{font-size: 20px;}
+h3{font-size: 15px; color: white}
+h4{ padding: 0; margin: 0; font-size: 12px; }
+mm
+.col-lg-5{
+    padding: 0;
+    
+}
+.form-control
+{
+    border-radius: 10px;
+
+}
+
+
+
+.nav-link{
+    color: green;
+}
+
+.item
+{
+background-color: green;
+    padding: 5px 10px;
+    border-radius: 60px;
+    margin: 2px 1px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.container2
+{
+    width: 90%;
+margin: 0 auto 0 
+}
+
+#logopic
+{
+    width: 180px;
+    margin: 2px 0 2px;
+}
+
+
+
+.lineup{display: flex;}
+
+
+
+
+.shortlists{
+    padding: 2px;
+overflow: scroll;
+    }
+
+
+.cardheader
+{
+    display: flex;
+}
+
+.no-padding{
+    padding: 0;
+    margin: 0;
+    align-content: flex-start;
+}
+
+
+
+
+/*.akabiDV{margin-left: 0px}*/
+
+
+.col-lg-9, .col-lg-3{padding: 0}
+
+#omuziroCardName{
+    color: green;
+    font-weight: bold;
+    font-size: 23px;
+}
+
+
+#nam{
+    padding: 0;
+    margin: 0;
+    font-size: 30px;
+    
+}
+
+
+
+
+#ebirala
+{
+    margin: 0px 0px 0px 0px;
+    padding: 0;
+    border: none;
+    background:none;
+    font-size: 12px;
+    float: right;
+}
+
 
 
 }
