--- a/src/App.css
+++ b/src/App.css
@@ -496,6 +496,12 @@ font-size: 15px
     margin: 30px 10px 15px;
 }
 
+#nameDescr{
+    font-size: 12px;
+    color: lightblue;
+    margin: 30px 10px 15px;
+}
+
 #inputing
 {
 font-size: 10px;
